📚 German Language Overhaul for Landing Page and My-Account (#68)
* chore: update translations with Fink 🐦

* chore: update translations with Fink 🐦

* chore: update translations with Fink 🐦

* chore: update translations with Fink 🐦

* chore: update translations with Fink 🐦

* chore: update translations with Fink 🐦

---------

Co-authored-by: m1212e <14091540+m1212e@users.noreply.github.com>
Co-authored-by: Tade Strehk <tade99@gmx.de>

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -14,36 +14,36 @@
 	"backToHome": "Zurück zur Homepage",
 	"committee": "Gremium",
 	"noConferenceHeading": "Keine Konferenz",
-	"noConferenceText": "Es sieht so aus, als wärst du bisher nicht bei einer Konferenz angemeldet.",
-	"homeHeroSub": "Zentrale Anmeldeplattform für DMUN-Konferenzen",
+	"noConferenceText": "Du bist bisher bei keiner Konferenz angemeldet.",
+	"homeHeroSub": "Gemeinsame Anmeldeplattform für MUN-SH und MUNBW",
 	"home": "Startseite",
-	"homeRegistration": "Konferenzanmeldung",
-	"homeRegistrationSub": "Melden Sie sich für die nächste Konferenz an, indem Sie sich bewerben",
-	"homeRegistrationBtn": "Zur Anmeldung",
-	"homeYourConferences": "Ihre Konferenzen",
-	"homeYourConferencesSub": "Sehen Sie sich die Konferenzen an, an denen Sie teilnehmen",
+	"homeRegistration": "Zur Konferenz anmelden",
+	"homeRegistrationSub": "Melde dich für eine Konferenz an – alleine oder in einer Gruppe",
+	"homeRegistrationBtn": "Jetzt anmelden",
+	"homeYourConferences": "Meine Konferenzen",
+	"homeYourConferencesSub": "Vervollständige eine bestehende Anmeldung und sieh nach, welche Aufgaben noch zu erledigen sind",
 	"homeYourConferencesBtn": "Zum Dashboard",
-	"homeDraftDisclaimerHeader": "Seite im Aufbau",
-	"homeDraftDisclaimer": "Diese Seite befindet sich noch im Aufbauprozess. Bitte haben Sie Verständnis, dass einerseits noch nicht alle Funktionen verfügbar sind und es außerdem zu Fehlern kommen kann. Wir arbeiten mit Hochdruck in unserer Freizeit daran, die Anwendung weiter aufzubauen.",
-	"homeDraftPleaseHelp": "Um Ihnen das bestmögliche Erlebnis zu bereiten, sind wir auf Ihre Hilfe angewiesen: Wenn Sie einen Vorschlag haben oder Ihnen ein Bug, Problem oder Fehler auffällt, dann melden Sie dies gerne über unser Feedback-Board.",
-	"homeHelpWithTechnicalIssuesHeadline": "Hilfe bei technischen Problemen",
-	"homeHelpWithTechnicalIssues": "Wenn Sie technische Probleme haben, helfen wir Ihnen gerne auch persönlich weiter. Wenden Sie sich dafür entweder an die Teilnehmendenbetreuung des jeweiligen Projektes oder schreiben Sie eine E-Mail an <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a>.",
+	"homeDraftDisclaimerHeader": "Diese Seite ist noch im Aufbau",
+	"homeDraftDisclaimer": "<em>MUNify</em> ist seit 2024 unsere neue Anmeldeplattform. Es sind noch nicht alle Funktionen verfügbar und manchmal kann es zu Fehlern kommen. Wir arbeiten mit Hochdruck in unserer Freizeit daran, die Plattform weiterzuentwickeln. Vielen Dank für dein Verständnis!",
+	"homeDraftPleaseHelp": "Wir brauchen dein Feedback! Wenn dir beim Anmeldevorgang ein Fehler oder Problem auffällt oder du einen Verbesserungsvorschlag hast, melde es gern über unser Feedback-Portal.",
+	"homeHelpWithTechnicalIssuesHeadline": "Hast du technische Probleme?",
+	"homeHelpWithTechnicalIssues": "Wir helfen dir gern persönlich weiter. Wende dich an deine Teilnehmendenbetreuung oder an <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a>.",
 	"homeOurConferences": "Unsere Konferenzen",
 	"homeAboutUs": "Über uns",
 	"homeAboutUsText": "DMUN ist ein gemeinnütziger Verein von jungen Erwachsenen, die sich für internationale Politik und die Vereinten Nationen begeistern. Wir sind bundesweit und auf internationaler Ebene im Bereich der politischen Jugendbildung und des Youth Empowerments tätig. 2003 gegründet und seit 2012 als Nichtregierungsorganisation mit speziellem Beraterstatus beim Wirtschafts- und Sozialrat der Vereinten Nationen sowie beim UNDPI akkreditiert, veranstalten wir politische Planspiele, bei denen Jugendliche und junge Erwachsene zwischen 15 und 21 Jahren eine Konferenz der Vereinten Nationen simulieren. Außerdem setzen wir uns auf internationaler Ebene für politische Jugendbildung und die Partizipation junger Menschen an politischen Prozessen ein.",
-	"selectConference": "Wählen Sie zuerst die Konferenz aus, zu der Sie sich gerne anmelden möchten.",
+	"selectConference": "Zu welcher Konferenz möchtest du dich anmelden?",
 	"unknownLocation": "Ort unbekannt",
 	"unknownDate": "Datum unbekannt",
 	"unknownLanguage": "Sprache unbekannt",
-	"registrationOpen": "Anmeldung offen bis {date}",
+	"registrationOpen": "Anmeldung möglich bis {date}",
 	"registrationClosed": "Anmeldung geschlossen",
 	"registrationNotYetOpen": "Anmeldung startet am {date}",
 	"unknownRegistrationStatus": "Anmeldestatus unbekannt",
 	"alreadRegistered": "Bereits angemeldet",
 	"RegistrationNotPossible": "Anmeldung nicht möglich",
-	"conferenceSignupIntroduction": "Sie haben verschiedene Möglichkeiten, sich anzumelden. Auf einen Staat oder eine*n nichtstaatliche*n Akteur*in bewerben Sie sich als Team von mindestens 2 Personen. Auf spezielle Rollen wie als Mitglied der Konferenzpresse bewerben Sie sich alleine.",
-	"signUpAssistant": "Anmeldeassistent",
-	"signUpAssistantDescription": "Der Anmeldeprozess kann auf den ersten Blick kompliziert wirken. Nutzen Sie den Anmeldeassistenten, um einen Überblick zu erhalten.",
+	"conferenceSignupIntroduction": "Auf der Konferenz gibt es verschiedene Rollen. Für einen <strong>Staat</strong> oder eine*n <strong>nichtstaatliche*n Akteur*in</strong> meldest du dich als Team von mindestens 2 Personen an. Für <strong>spezielle Rollen</strong> wie die Konferenzpresse bewirbst du dich alleine.",
+	"signUpAssistant": "Unsicher, wie du dich anmelden sollst?",
+	"signUpAssistantDescription": "Wenn du nicht sicher bist, welche Anmeldung für dich die richtige ist, kannst du unseren Anmeldeassistenten benutzen.",
 	"openAssistant": "Assistent starten",
 	"createDelegation": "Delegation erstellen",
 	"createDelegationDescription": "Hier kannst du als Delegationsleiter*in eine neue Delegation anlegen und Menschen zu der Delegation einladen",
@@ -130,14 +130,14 @@
 	"signupForSupervisors": "Anmeldung für Betreuer*innen",
 	"delegationJoinForSupervisorsDescription": "Als Betreuer*in können Sie mehrere Delegationen überwachen. Erfragen Sie dafür bei den Delegationsleiter*innen den Code der Delegation. Bitte beachten Sie, dass Sie keine Delegationen selbstständig für Ihre Schüler*innen anlegen können. Sie können sich nur nach Erhalt des Codes einer Delegation anschließen.",
 	"myAccount": "Mein Konto",
-	"herYouFindYourAccountInfo": "Hier findest du alle Informationen und Präferenzen zu deinem Konto.",
-	"completeData": "Daten Vervollständigen",
+	"herYouFindYourAccountInfo": "Hier findest du deine persönlichen Daten und Einstellungen zu deinem Konto.",
+	"completeData": "Daten vervollständigen",
 	"completeDataExplaination": "Vielen Dank für deine Anmeldung. Bitte vervollständige deine persönlichen Daten, um deine Anmeldung abzuschließen. Danach kannst du da weitermachen, wo du eigentlich hin wolltest. Wenn du auf Speichern klickst, wirst du automatisch weitergeleitet.",
 	"personalData": "Persönliche Daten",
 	"phoneNumber": "Telefonnummer",
 	"address": "Adresse",
-	"street": "Straße",
-	"streetAddition": "ggf. Zusatz",
+	"street": "Straße und Hausnummer",
+	"streetAddition": "ggf. Adresszusatz",
 	"zipCode": "Postleitzahl",
 	"city": "Stadt",
 	"pleaseSelectCountry": "Land",
@@ -164,9 +164,9 @@
 	"email": "E-Mail",
 	"userId": "Benutzer-ID",
 	"edit": "Bearbeiten",
-	"deleteAccountGPDR": "Wenn Sie Ihr Konto DSGVO-konform löschen lassen möchten, wenden Sie sich bitte an die Teilnehmendenbetreuung einer Konferenz oder schreiben Sie eine E-Mail an <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a>.",
-	"receiveGeneralInformation": "Allgemeine E-Mails zum Projekt erhalten",
-	"receiveJoinTeamInformation": "E-Mails zum Beitritt ins DMUN Team/den Verein erhalten",
+	"deleteAccountGPDR": "Wenn du dein Konto DSGVO-konform löschen lassen möchtest, wende dich bitte an deine Teilnehmendenbetreuung oder an <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a>.",
+	"receiveGeneralInformation": "E-Mails mit Informationen zu DMUN Projekten erhalten",
+	"receiveJoinTeamInformation": "E-Mails mit Ausschreibungen für Teampositionen erhalten",
 	"activeMembers": "Aktive Mitglieder",
 	"removeMember": "Mitglied entfernen",
 	"removeMemberConfirmation": "Möchtest du dieses Mitglied wirklich entfernen?",
@@ -188,10 +188,10 @@
 	"completeSignupSuccessDescription": "Ihre Anmeldung wurde erfolgreich abgeschlossen. Sie nehmen nun am Auswahlverfahren teil. Das Auswahlverfahren findet nach Ende der Anmeldephase statt und kann einige Zeit in Anspruch nehmen. Sie werden per E-Mail über das Ergebnis informiert. Bitte sehen Sie von Nachfragen ab.",
 	"noDangerZoneOptions": "Da Sie die Online-Anmeldung bereits abgeschlossen haben, können Sie die Delegation nicht mehr löschen. Bitte wenden Sie sich mit Problemen an die Teilnehmendenbetreuung.",
 	"noDangerZoneOptionsSingleParticipants": "Da Sie die Online-Anmeldung bereits abgeschlossen haben, können Sie Ihre Einzelbewerbung weder verlassen noch löschen. Bitte wenden Sie sich mit Problemen an die Teilnehmendenbetreuung.",
-	"profileSettings": "Profilverwaltung",
-	"logout": "Logout",
+	"profileSettings": "Meine persönlichen Daten",
+	"logout": "Abmelden",
 	"feedback": "Feedback",
-	"feedbackBoard": "Feedback-Board",
+	"feedbackBoard": "Feedback geben",
 	"activeConferences": "Aktive Konferenzen",
 	"upcomingConferences": "Kommende Konferenzen",
 	"pastConferences": "Vergangene Konferenzen",
@@ -239,7 +239,7 @@
 	"alreadyAnsweredAllQuestions": "Sie haben bereits alle Fragen beantwortet!",
 	"rights": "Rechte",
 	"cookieNoticeHeading": "Wir verwenden Cookies",
-	"cookieNoticeDescription": "Delegator verwendet technisch notwendige Cookies, um das Benutzen der App zu ermöglichen.",
+	"cookieNoticeDescription": "Wir verwenden technisch notwendige Cookies, um das Benutzen der App zu ermöglichen.",
 	"acceptAll": "Alle akzeptieren",
 	"rejectAll": "Alle ablehnen",
 	"managePreferences": "Einstellungen verwalten",
@@ -279,20 +279,20 @@
 	"assistantFlowFinalSupervisorAnswerWait1": "Dann bestimmen Sie bitte für jede Delegation eine*n Delegationsleiter*in und lassen sie Ihre Schüler*innen die Delegation anlegen.",
 	"assistantFlowFinalSupervisorAnswerWait2": "Anschließend erhalten die Delegationsmitglieder einen Beitrittscode, mit dem Sie sich der Delegation als Betreuer*in anschließen können.",
 	"assistantFlowFinalSupervisorAnswerWait3": "Bei Fragen oder Problemen wenden Sie sich bitte an die Teilnehmendenbetreuung des Projektes. Sie finden die Kontaktdaten auf der Konferenz-Website.",
-	"assistantFlowParticipantOrSupervisor1": "Hallo! Ich bin der Anmeldeassistent vom MUNify Delegator.",
-	"assistantFlowParticipantOrSupervisor2": "Möchten Sie sich als Teilnehmende*r oder als Betreuer*in anmelden?",
-	"assistantFlowParticipantOrSupervisorAnswer1": "Ich möchte mich als Teilnehmende*r anmelden.",
-	"assistantFlowParticipantOrSupervisorAnswer2": "Ich möchte mich als Betreuer*in anmelden.",
+	"assistantFlowParticipantOrSupervisor1": "Hallo! Ich bin der Anmeldeassistent von MUNify, der gemeinsamen Anmeldeplattform für MUN-SH und MUNBW. Ich helfe dir bei der Wahl der richtigen Anmeldung.",
+	"assistantFlowParticipantOrSupervisor2": "Möchtest du selbst an der Konferenz teilnehmen und eine Rolle in der Simulation einnehmen? Oder bist du z. B. eine Lehrkraft und möchtest dich als Betreuer*in anmelden, ohne selbst teilzunehmen?",
+	"assistantFlowParticipantOrSupervisorAnswer1": "Ich möchte selbst an der Konferenz teilnehmen.",
+	"assistantFlowParticipantOrSupervisorAnswer2": "Ich möchte nicht selbst teilnehmen, sondern mich als Betreuer*in anmelden.",
 	"assistantFlowPartnersCreatedDelegation1": "Wunderbar! Dann sind Sie hier genau richtig.",
 	"assistantFlowPartnersCreatedDelegation2": "Da die Anmeldung als Gruppe auch geschlossen stattfinden muss, müssen Sie zunächst klären, ob schon jemand Ihrer Gruppe eine Delegation erstellt hat, der sie beitreten können.",
 	"assistantFlowPartnersCreatedDelegation3": "Der/die Ersteller*in einer Delegation wird automatisch zur Delegationsleiter*in",
 	"assistantFlowPartnersCreatedDelegation4": "Haben sie schon eine*n Delegationsleiter*in, der/die bereits eine Delegation erstellt hat?",
 	"assistantFlowPartnersCreatedDelegationAnswer1": "Ja, es gibt bereits eine Delegation.",
 	"assistantFlowPartnersCreatedDelegationAnswer2": "Nein, noch hat niemand eine Delegation erstellt.",
-	"assistantFlowRole1": "Wunderbar – herzlich Willkommen! Damit ich Sie richtig durch den Anmeldeprozess führen kann, verraten Sie mir doch, welche Rolle Sie gerne einnehmen möchten.",
-	"assistantFlowRole2": "Hier eine kleine Übersicht über Ihre Möglichkeiten inklusive Erläuterungen:",
-	"assistantFlowRoleDelegate1": "Delegierte*r",
-	"assistantFlowRoleDelegate2": "Als Delegierte*r vertreten Sie die konkreten Interessen eines Landes in einem der Gremien der Konferenz.",
+	"assistantFlowRole1": "Herzlich willkommen – wir freuen uns auf dich! Du musst dir zunächst aussuchen, welche Rolle du auf der Konferenz einnehmen möchtest.",
+	"assistantFlowRole2": "Du kannst dir eine der folgenden Rollen aussuchen:",
+	"assistantFlowRoleDelegate1": "Delegierte*r eines Staates",
+	"assistantFlowRoleDelegate2": "Als Delegierte*r vertrittst du die konkreten Interessen eines Staates in einem Gremium. Zum Beispiel: <em>Schweden im Wirtschafts- und Sozialrat</em> oder <em>Kenia in der Generalversammlung</em>.",
 	"assistantFlowRoleNSA1": "Vertreter*in eine*r NA",
 	"assistantFlowRoleNSA2": "Als Vertreter*in eine*r Nichtstaatlichen Akteur*in (NA) vertreten Sie eine Organisation.",
 	"assistantFlowRoleNSA3": "Dabei sind Sie nicht an ein bestimmtes Gremium gebunden sondern können in den Gremien einfluss nehmen, die für Ihre Organisation die wichtigsten Themen behandeln",
