Anpassung de Anmeldeprozesses in du form
Bis auf die Texte für die Betreuer sollte alles in der du Form sein

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -233,8 +233,8 @@
 	"noConferenceOpenForRegistrationText": "There are currently no conferences you can register for. Please check the respective conference website for registration periods.",
 	"rotateCode": "Rotate Code",
 	"codeRotated": "The code has been rotated",
-	"pronounsHeHim": "He/Him",
-	"pronounsSheHer": "She/Her",
+	"pronounsHeHim": "he/him",
+	"pronounsSheHer": "she/her",
 	"alreadyAnsweredAllQuestions": "You have already answered all the questions!",
 	"rights": "Rights",
 	"cookieNoticeHeading": "We use cookies",
