🐞 fix (App Frontend): Experience not being saved, small fixes branch: 77-experience-field-is-not-saved-when-creating-a-delegation

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -24,7 +24,7 @@
 	"homeYourConferencesSub": "Vervollständige eine bestehende Anmeldung und sieh nach, welche Aufgaben noch zu erledigen sind",
 	"homeYourConferencesBtn": "Zum Dashboard",
 	"homeDraftDisclaimerHeader": "Diese Seite ist noch im Aufbau",
-	"homeDraftDisclaimer": "<em>MUNify</em> ist seit 2024 unsere neue Anmeldeplattform. Es sind noch nicht alle Funktionen verfügbar und manchmal kann es zu Fehlern kommen. Wir arbeiten mit Hochdruck in unserer Freizeit daran, die Plattform weiterzuentwickeln. Vielen Dank für dein Verständnis!",
+	"homeDraftDisclaimer": "<em>MUNify DELEGATOR</em> ist seit 2024 unsere neue Anmeldeplattform. Es sind noch nicht alle Funktionen verfügbar und manchmal kann es zu Fehlern kommen. Wir arbeiten mit Hochdruck in unserer Freizeit daran, die Plattform weiterzuentwickeln. Vielen Dank für dein Verständnis!",
 	"homeDraftPleaseHelp": "Wir brauchen dein Feedback! Wenn dir beim Anmeldevorgang ein Fehler oder Problem auffällt oder du einen Verbesserungsvorschlag hast, melde es gern über unser Feedback-Portal.",
 	"homeHelpWithTechnicalIssuesHeadline": "Hast du technische Probleme?",
 	"homeHelpWithTechnicalIssues": "Wir helfen dir gern persönlich weiter. Wende dich an deine Teilnehmendenbetreuung oder an <a href='mailto:support@dmun.de' class='link underline'>support@dmun.de</a>.",
