--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -55,7 +55,7 @@
 	"individualApplicationDescription2": "Hier kannst du dich als Einzelperson für spezielle Rollen bewerben. Diese Rollen sind nicht an eine Delegation gebunden. Wenn du nicht für die Rolle genommen wirst, werden wir mit dir Kontakt aufnehmen und dir eine andere Rolle vorschlagen.",
 	"supervisor": "Betreuer*in",
 	"supervisors": "Betreuer*innen",
-	"supervisorDelegationDescription": "Betreuer*innen können den Status Ihrer Delegation überwachen. Bitte kontaktieren Sie die Teilnehmendenbetreuung, wenn sich Ihrer Delegation unerwartet ein*e Betreuer*in angeschlossen hat.",
+	"supervisorDelegationDescription": "Betreuer*innen können den Status deiner Delegatione überwachen. Bitte kontaktiere die Teilnehmendenbetreuung, wenn sich deiner Delegation unerwartet ein*e Betreuer*in angeschlossen hat.",
 	"applyAsSupervisor": "Anmelden als Betreuer*in",
 	"applyAsSupervisorDescription": "Hier kannst du dich als Betreuer*in für eine Delegation anmelden. Als Betreuer*in hast du Einsicht in alle deine Delegationen und kannst sie organisatorisch unterstützen.",
 	"infos": "Infos",
@@ -122,13 +122,13 @@
 	"delegationPreferencesDescriptionMember": "Hier kannst du die Vertretungswünsche deiner Delegation sehen. Nur die Delegationsleitung kann diese bearbeiten.",
 	"setDelegationPreferences": "Wünsche festlegen",
 	"changeDelegationPreferences": "Wünsche anpassen",
-	"delegationIdForSupport": "Wenn der Support Sie nach Ihrer Delegations-ID fragt, finden Sie diese hier:",
-	"singleParticipantsIdForSupport": "Wenn der Support Sie nach Ihrer Einzelteilnehmer-ID fragt, finden Sie diese hier:",
+	"delegationIdForSupport": "Wenn der Support dich nach deiner Delegations-ID fragt, findest du diese hier:",
+	"singleParticipantsIdForSupport": "Wenn der Support dich nach deiner Einzelteilnehmer-ID fragt, findest du diese hier:",
 	"noMembersFound": "Keine Delegationsmitglieder gefunden",
 	"noRoleApplications": "Bisher keine Rollenbewerbungen vorhanden",
 	"amountOfDelegates": "Anzahl der Delegationsmitglieder",
 	"signupForSupervisors": "Anmeldung für Betreuer*innen",
-	"delegationJoinForSupervisorsDescription": "Als Betreuer*in können Sie mehrere Delegationen überwachen. Erfragen Sie dafür bei den Delegationsleiter*innen den Code der Delegation. Bitte beachten Sie, dass Sie keine Delegationen selbstständig für Ihre Schüler*innen anlegen können. Sie können sich nur nach Erhalt des Codes einer Delegation anschließen.",
+	"delegationJoinForSupervisorsDescription": "Als Betreuer*in kannst du mehrere Delegationen überwachen. Erfrage dafür bei den Delegationsleiter*innen den Code der Delegation. Bitte beachte, dass du keine Delegationen selbstständig für deine Schüler*innen anlegen kannst.  Du kannst dich nur nach Erhalt des Codes einer Delegation anschließen.",
 	"myAccount": "Mein Konto",
 	"herYouFindYourAccountInfo": "Hier findest du deine persönlichen Daten und Einstellungen zu deinem Konto.",
 	"completeData": "Daten vervollständigen",
@@ -187,7 +187,7 @@
 	"completeSignupSuccess": "Anmeldung erfolgreich abgeschlossen",
 	"completeSignupSuccessDescription": "Die Anmeldung wurde erfolgreich abgeschlossen. Ihr nehmt nun am Auswahlverfahren teil. Das Auswahlverfahren findet nach Ende der Anmeldephase statt und kann einige Zeit in Anspruch nehmen. Du wirst per E-Mail über das Ergebnis informiert. Bitte seht von Nachfragen ab.",
 	"noDangerZoneOptions": "Da du die Online-Anmeldung bereits abgeschlossen hast, kannst du die Delegation weder verlassen noch löschen. Bitte wenden dich mit Problemen an die Teilnehmendenbetreuung.",
-	"noDangerZoneOptionsSingleParticipants": "Da du die Online-Anmeldung bereits abgeschlossen hast, können Sie Ihre Einzelbewerbung nicht mehr löschen. Bitte wende dich mit Problemen an die Teilnehmendenbetreuung.",
+	"noDangerZoneOptionsSingleParticipants": "Da du die Online-Anmeldung bereits abgeschlossen hast, kannst du deine Einzelbewerbung nicht mehr löschen. Bitte wende dich mit Problemen an die Teilnehmendenbetreuung.",
 	"profileSettings": "Meine persönlichen Daten",
 	"logout": "Abmelden",
 	"feedback": "Feedback",
@@ -223,11 +223,11 @@
 	"applied": "Angemeldet",
 	"notApplied": "Anmeldung ausstehend",
 	"ownPresence": "Eigene Anwesenheit",
-	"ownPresenceDescription": "Hier können Sie angeben, ob Sie selbst an der Konferenz teilnehmen oder ob Sie nur die Delegation während der Vorbereitung betreuen. Wenn Sie selbst teilnehmen, müssen auch Sie den Teilnahmebeitrag entrichten.",
+	"ownPresenceDescription": "Hier kannst du angeben, ob du selbst an der Konferenz teilnimmst oder ob du nur die Delegation während der Vorbereitung betreust. Wenn du selbst teilnimmst, musst du auch den Teilnahmebeitrag entrichten.",
 	"willBePresentAtConference": "Ich werde an der Konferenz teilnehmen.",
 	"willNotBePresentAtConference": "Ich werde <strong><u>nicht</u></strong> an der Konferenz teilnehmen.",
 	"presentAtConference": "Anwesend auf der Konferenz",
-	"registeredAsSupervisor": "Sie sind als Betreuer*in angemeldet und können hier den Status Ihrer Delegationen überwachen. Wenn Sie weitere Delegationen hinzufügen möchten, folgen Sie einfach erneut dem Anmeldeprozess.",
+	"registeredAsSupervisor": "Du bist als Betreuer*in angemeldet und können hier den Status deiner Delegationen überwachen. Wenn du weitere Delegationen hinzufügen möchtest, folge einfach erneut dem Anmeldeprozess.",
 	"addAnotherDelegation": "Weitere Delegation hinzufügen",
 	"addAnotherApplication": "Weitere Bewerbung hinzufügen",
 	"noConferenceOpenForRegistration": "Keine Konferenz zur Anmeldung geöffnet",
@@ -272,13 +272,13 @@
 	"assistantFlowFinalJoinDelegation2": "Mit dem Beitrittscode kannst du dann der Delegation beitreten.",
 	"assistantFlowFinalJoinDelegation3": "Alternativ kann dir auch die Delegationsleitung einen magischen Link zur Anmeldung schicken.",
 	"assistantFlowFinalJoinDelegation4": "Bei Fragen oder Problemen wende dich bitte an die Teilnehmendenbetreuung des Projektes. Du findest die Kontaktdaten auf der Website.",
-	"assistantFlowFinalSupervisor1": "Dann müssen Sie jetzt Ihre Delegationsleiter*innen (also die jeweiligen Ersteller*innen der Delegation) bitten, Ihnen den Beitrittscode zu geben.",
-	"assistantFlowFinalSupervisor2": "Anschließend können Sie sich als Betreuer*in anmelden.",
-	"assistantFlowFinalSupervisor3": "Sie können mehrere Delegationscodes auf einmal angeben und es ist auch auf dem gleichen Weg möglich, weiteren Delegationen nachträglich beizutreten.",
-	"assistantFlowFinalSupervisor4": "Bei Fragen oder Problemen wenden Sie sich bitte an die Teilnehmendenbetreuung des Projektes. Sie finden die Kontaktdaten auf der Konferenz-Website.",
-	"assistantFlowFinalSupervisorAnswerWait1": "Dann bestimmen Sie bitte für jede Delegation eine*n Delegationsleiter*in und lassen sie Ihre Schüler*innen die Delegation anlegen.",
-	"assistantFlowFinalSupervisorAnswerWait2": "Anschließend erhalten die Delegationsmitglieder einen Beitrittscode, mit dem Sie sich der Delegation als Betreuer*in anschließen können.",
-	"assistantFlowFinalSupervisorAnswerWait3": "Bei Fragen oder Problemen wenden Sie sich bitte an die Teilnehmendenbetreuung des Projektes. Sie finden die Kontaktdaten auf der Konferenz-Website.",
+	"assistantFlowFinalSupervisor1": "Dann mussst du jetzt die Delegationsleiter*innen (also die jeweiligen Ersteller*innen der Delegation) bitten, dir den Beitrittscode zu geben.",
+	"assistantFlowFinalSupervisor2": "Anschließend kannst du dich als Betreuer*in anmelden.",
+	"assistantFlowFinalSupervisor3": "Du kannst mehrere Delegationscodes auf einmal angeben und es ist auch auf dem gleichen Weg möglich, weiteren Delegationen nachträglich beizutreten.",
+	"assistantFlowFinalSupervisor4": "Bei Fragen oder Problemen wende dich bitte an die Teilnehmendenbetreuung des Projektes. Du findest die Kontaktdaten auf der Konferenz-Website.",
+	"assistantFlowFinalSupervisorAnswerWait1": "Dann bestimmst du bitte für jede Delegation eine*n Delegationsleiter*in und lass deine Schüler*innen die Delegation anlegen.",
+	"assistantFlowFinalSupervisorAnswerWait2": "Anschließend erhalten die Delegationsmitglieder einen Beitrittscode, mit dem du dich der Delegation als Betreuer*in anschließen kannst.",
+	"assistantFlowFinalSupervisorAnswerWait3": "Bei Fragen oder Problemen wende dich bitte an die Teilnehmendenbetreuung des Projektes. Du findest die Kontaktdaten auf der Konferenz-Website.",
 	"assistantFlowParticipantOrSupervisor1": "Hallo! Ich bin der Anmeldeassistent von MUNify, der gemeinsamen Anmeldeplattform für MUN-SH und MUNBW. Ich helfe dir bei der Wahl der richtigen Anmeldung.",
 	"assistantFlowParticipantOrSupervisor2": "Möchtest du selbst an der Konferenz teilnehmen und eine Rolle in der Simulation einnehmen? Oder bist du z. B. eine Lehrkraft und möchtest dich als Betreuer*in anmelden, ohne selbst teilzunehmen?",
 	"assistantFlowParticipantOrSupervisorAnswer1": "Ich möchte selbst an der Konferenz teilnehmen.",
@@ -302,20 +302,20 @@
 	"assistantFlowRoleOther1": "Andere spezielle Rolle",
 	"assistantFlowRoleOther2": "Manchmal werden bei unseren Konferenzen auch noch spezielle Rollen angeboten, die nicht in die oben genannten Kategorien passen.",
 	"assistantFlowRoleOther3": "Diese können zum Beispiel <em>Richter*in am IGH</em> sein.",
-	"assistantFlowRoleOther4": "Ob es solche Angebote wie die Simulation einer Krise oder des Internationalen Gerichtshofs gibt, erfahren Sie auf der Website der Konferenz bzw. bei den Auswahlmöglichkeiten der Einzelanmeldung.",
+	"assistantFlowRoleOther4": "Ob es solche Angebote wie die Simulation einer Krise oder des Internationalen Gerichtshofs gibt, erfährst dz auf der Website der Konferenz bzw. bei den Auswahlmöglichkeiten der Einzelanmeldung.",
 	"assistantFlowRoleAnswer1": "Ich möchte als Delegierte*r eines Landes teilnehmen.",
 	"assistantFlowRoleAnswer2": "Ich möchte als Vertreter*in eines Nichtstaatlichen Akteurs teilnehmen.",
 	"assistantFlowRoleAnswer3": "Ich möchte als Journalist*in der Konferenzpresse teilnehmen.",
 	"assistantFlowRoleAnswer4": "Ich möchte eine andere spezielle Rolle einnehmen (wenn verfügbar).",
-	"assistantFlowSupervisorUsersAlreadyRegistered1": "Sehr schön! Als betreuende Person können Sie nur bereits erstellte Delegationen überwachen.",
-	"assistantFlowSupervisorUsersAlreadyRegistered2": "Wichtig: Anders als früher müssen Ihre Schüler*innen die Delegation selbst erstellen. Sie können den Delegationen anschließend mit dem Delegationscode als betreuende Person beitreten.",
-	"assistantFlowSupervisorUsersAlreadyRegistered3": "Haben Ihre Schüler*innen bereits Delegationen erstellt?",
+	"assistantFlowSupervisorUsersAlreadyRegistered1": "Sehr schön! Als betreuende Person kannst du nur bereits erstellte Delegationen überwachen.",
+	"assistantFlowSupervisorUsersAlreadyRegistered2": "Wichtig: Anders als früher müssen deine Schüler*innen die Delegation selbst erstellen. Du kannst den Delegationen anschließend mit dem Delegationscode als betreuende Person beitreten.",
+	"assistantFlowSupervisorUsersAlreadyRegistered3": "Haben deine Schüler*innen bereits Delegationen erstellt?",
 	"assistantFlowSupervisorUsersAlreadyRegisteredAnswer1": "Ja, haben sie.",
 	"assistantFlowSupervisorUsersAlreadyRegisteredAnswer2": "Nein, noch nicht.",
 	"delegationHasAlreadyApplied": "Die Delegation hat ihre Bewerbung bereits abgeschickt.",
-	"youAreAlreadySupervisor": "Sie sind bereits ein Betreuer in dieser Konferenz.",
-	"youAreAlreadySingleParticipant": "Sie sind bereits ein Einzelteilnehmer in dieser Konferenz.",
-	"youAreAlreadyDelegationMember": "Sie sind bereits ein Delegationsmitglied in dieser Konferenz.",
-	"youAreAlreadyTeamMember": "Sie sind bereits ein Teammitglied in dieser Konferenz.",
+	"youAreAlreadySupervisor": "Du bist bereits ein Betreuer in dieser Konferenz.",
+	"youAreAlreadySingleParticipant": "Du bist bereits ein Einzelteilnehmer in dieser Konferenz.",
+	"youAreAlreadyDelegationMember": "Du bist bereits ein Delegationsmitglied in dieser Konferenz.",
+	"youAreAlreadyTeamMember": "Du bist bereits ein Teammitglied in dieser Konferenz.",
 	"yourAccountDataWillBeUpdatedAfterLogin": "Die in GUARD aktualisierten Account Daten werden nach einem Aus- und Einloggen in DELEGATOR übernommen!"
 }
