--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -62,7 +62,7 @@
 	"questionnaire": "Fragebogen",
 	"review": "Überprüfen",
 	"invite": "Einladen",
-	"createDelegationProcessExplaination": "<p class='max-ch-md'>Du bist im Begriff, eine Delegation anzulegen. Nachdem du eine Delegation angelegt hast, kanst du Delegationspartner*innen einladen und euch geschlossen als Delegierte auf einen Staat oder als Vertreter*innen einer/eines Nichtstaatlichen Aktuer*in bewerben.</p><p class='max-ch-md'>Du wirst automatisch als Delegationsleiter*in eingetragen. Du können auch eine betreuende Person einladen, die sich bei der Organisation der Delegation unterstützt. </p><p class='max-ch-md'>Bitte beachte, dass du sich nicht alleine auf eine Delegation bewerben kannst. Wenn du dich alleine bewerben möchtest, schau <a href='./individual' class='link underline'>hier</a> nach Einzelplätzen, auf die du dich bewerben kannst. Außerdem hilft dir die Teilnehmendenbetreuung sehr gerne bei der Vermittlung von Delegationspartner*innen. Den Kontakt findest du auf der Website der jeweiligen Konferenz. </p>",
+	"createDelegationProcessExplaination": "<p class='max-ch-md'>Du bist im Begriff, eine Delegation anzulegen. Nachdem du eine Delegation angelegt hast, kanst du Delegationspartner*innen einladen und euch geschlossen als Delegierte auf einen Staat oder als Vertreter*innen einer/eines Nichtstaatlichen Aktuer*in bewerben.</p><p class='max-ch-md'>Du wirst automatisch als Delegationsleiter*in eingetragen. Du kannst auch eine betreuende Person einladen, die sich bei der Organisation der Delegation unterstützt. </p><p class='max-ch-md'>Bitte beachte, dass du sich nicht alleine auf eine Delegation bewerben kannst. Wenn du dich alleine bewerben möchtest, schau <a href='./individual' class='link underline'>hier</a> nach Einzelplätzen, auf die du dich bewerben kannst. Außerdem hilft dir die Teilnehmendenbetreuung sehr gerne bei der Vermittlung von Delegationspartner*innen. Den Kontakt findest du auf der Website der jeweiligen Konferenz. </p>",
 	"next": "Weiter",
 	"pleaseAnswerTheFollowingQuestions": "Bitte beantworte zunächst die folgenden Fragen. Du kannst die Antworten vor der Anmeldung noch ändern.",
 	"whichSchoolDoesYourDelegationComeFrom": "Von welcher Schule / Institution kommst du (bzw. die Mehrheit deiner Delegation)?",
@@ -118,7 +118,7 @@
 	"informationAndMotivationDescriptionHeadDelegate": "Hier kannst du die für die Bewerbung erforderlichen Informationen und Motivation bearbeiten.",
 	"informationAndMotivationDescriptionMember": "Hier kannst du die für die Bewerbung erforderlichen Informationen und Motivation sehen. Nur die Delegationsleitung kann diese bearbeiten.",
 	"delegationPreferences": "Vertretungswünsche",
-	"delegationPreferencesDescriptionHeadDelegate": "Wähle hier, welche Staaten/Organisationen die Delegation vertreten möchte. Ihr können mehrere Wünsche abgeben.",
+	"delegationPreferencesDescriptionHeadDelegate": "Wähle hier, welche Staaten/Organisationen die Delegation vertreten möchte. Du kannst mehrere Wünsche abgeben.",
 	"delegationPreferencesDescriptionMember": "Hier kannst du die Vertretungswünsche deiner Delegation sehen. Nur die Delegationsleitung kann diese bearbeiten.",
 	"setDelegationPreferences": "Wünsche festlegen",
 	"changeDelegationPreferences": "Wünsche anpassen",
@@ -227,7 +227,7 @@
 	"willBePresentAtConference": "Ich werde an der Konferenz teilnehmen.",
 	"willNotBePresentAtConference": "Ich werde <strong><u>nicht</u></strong> an der Konferenz teilnehmen.",
 	"presentAtConference": "Anwesend auf der Konferenz",
-	"registeredAsSupervisor": "Du bist als Betreuer*in angemeldet und können hier den Status deiner Delegationen überwachen. Wenn du weitere Delegationen hinzufügen möchtest, folge einfach erneut dem Anmeldeprozess.",
+	"registeredAsSupervisor": "Du bist als Betreuer*in angemeldet und kannst hier den Status deiner Delegationen überwachen. Wenn du weitere Delegationen hinzufügen möchtest, folge einfach erneut dem Anmeldeprozess.",
 	"addAnotherDelegation": "Weitere Delegation hinzufügen",
 	"addAnotherApplication": "Weitere Bewerbung hinzufügen",
 	"noConferenceOpenForRegistration": "Keine Konferenz zur Anmeldung geöffnet",
@@ -295,7 +295,7 @@
 	"assistantFlowRoleDelegate2": "Als Delegierte*r vertrittst du die konkreten Interessen eines Staates in einem Gremium. Zum Beispiel: <em>Schweden im Wirtschafts- und Sozialrat</em> oder <em>Kenia in der Generalversammlung</em>.",
 	"assistantFlowRoleNSA1": "Vertreter*in eine*r NA",
 	"assistantFlowRoleNSA2": "Als Vertreter*in eine*r Nichtstaatlichen Akteur*in (NA) vertrittst du eine Organisation.",
-	"assistantFlowRoleNSA3": "Dabei bist du nicht an ein bestimmtes Gremium gebunden sondern können in den Gremien einfluss nehmen, die für deine Organisation die wichtigsten Themen behandeln",
+	"assistantFlowRoleNSA3": "Dabei bist du nicht an ein bestimmtes Gremium gebunden sondern kannst in den Gremien einfluss nehmen, die für deine Organisation die wichtigsten Themen behandeln",
 	"assistantFlowRolePress1": "Journalist*in",
 	"assistantFlowRolePress2": "Als Journalist*in der Konferenzpresse berichtest du über die Geschehnisse in den Gremien.",
 	"assistantFlowRolePress3": "Du schreibst Artikel und Kommentare und produzierst auch Fernsehnachrichten, die an den Abenden der Konferenz gezeigt werden.",
