--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -66,7 +66,7 @@
 	"next": "Weiter",
 	"pleaseAnswerTheFollowingQuestions": "Bitte beantworte zunächst die folgenden Fragen. Du kannst die Antworten vor der Anmeldung noch ändern.",
 	"whichSchoolDoesYourDelegationComeFrom": "Von welcher Schule / Institution kommst du (bzw. die Mehrheit deiner Delegation)?",
-	"whichSchoolDoYouComeFrom": "Von welcher Schule / Institution kommt ihr?",
+	"whichSchoolDoYouComeFrom": "Von welcher Schule / Institution kommst du?",
 	"answerHere": "Antwort hier eingeben",
 	"whyDoYouWantToJoinTheConference": "Warum bewirbt sich deine Delegation bei der Konferenz?",
 	"whyDoYouWantToJoinTheConferenceSingleParticipant": "Warum bewirbst du dich bei der Konferenz auf diese Rollen?",
@@ -205,7 +205,7 @@
 	"signupNow": "Jetzt anmelden",
 	"completeSignupWarningHeading": "Wichtig: Online-Anmeldung abschließen",
 	"completeSignupWarningText": "Obwohl du bereits eine Delegation angelegt hast oder einer beigetreten bist, ist die Registrierung noch nicht abgeschlossen. Bitte schließe die Registrierung rechtzeitig vor Ablauf der Anmeldefrist ab, damit wir die Anmeldung deiner Delegation im Auswahlverfahren berücksichtigen können.",
-	"completeSignupWarningTextSingleParticipant": "Obwohl du sich bereits für eine Rolle beworben haben, ist die Registrierung noch nicht abgeschlossen. Bitte schließe deine Registrierung rechtzeitig vor Ablauf der Anmeldefrist ab, damit wir die Bewerbung im Auswahlverfahren berücksichtigen können.",
+	"completeSignupWarningTextSingleParticipant": "Obwohl du dich bereits für eine Rolle beworben haben, ist die Registrierung noch nicht abgeschlossen. Bitte schließe deine Registrierung rechtzeitig vor Ablauf der Anmeldefrist ab, damit wir die Bewerbung im Auswahlverfahren berücksichtigen können.",
 	"overview": "Übersicht",
 	"members": "Mitglieder",
 	"inTheDelegation": "in der Delegation",
@@ -227,7 +227,7 @@
 	"willBePresentAtConference": "Ich werde an der Konferenz teilnehmen.",
 	"willNotBePresentAtConference": "Ich werde <strong><u>nicht</u></strong> an der Konferenz teilnehmen.",
 	"presentAtConference": "Anwesend auf der Konferenz",
-	"registeredAsSupervisor": "Du bist als Betreuer*in angemeldet und kannst hier den Status deiner Delegationen überwachen. Wenn du weitere Delegationen hinzufügen möchtest, folge einfach erneut dem Anmeldeprozess.",
+	"registeredAsSupervisor": "Du bist als Betreuer*in angemeldet und kannst hier den Status deiner Delegationen einsehen. Wenn du weitere Delegationen hinzufügen möchtest, folge einfach erneut dem Anmeldeprozess.",
 	"addAnotherDelegation": "Weitere Delegation hinzufügen",
 	"addAnotherApplication": "Weitere Bewerbung hinzufügen",
 	"noConferenceOpenForRegistration": "Keine Konferenz zur Anmeldung geöffnet",
@@ -302,7 +302,7 @@
 	"assistantFlowRoleOther1": "Andere spezielle Rolle",
 	"assistantFlowRoleOther2": "Manchmal werden bei unseren Konferenzen auch noch spezielle Rollen angeboten, die nicht in die oben genannten Kategorien passen.",
 	"assistantFlowRoleOther3": "Diese können zum Beispiel <em>Richter*in am IGH</em> sein.",
-	"assistantFlowRoleOther4": "Ob es solche Angebote wie die Simulation einer Krise oder des Internationalen Gerichtshofs gibt, erfährst dz auf der Website der Konferenz bzw. bei den Auswahlmöglichkeiten der Einzelanmeldung.",
+	"assistantFlowRoleOther4": "Ob es solche Angebote wie die Simulation einer Krise oder des Internationalen Gerichtshofs gibt, erfährst du auf der Website der Konferenz bzw. bei den Auswahlmöglichkeiten der Einzelanmeldung.",
 	"assistantFlowRoleAnswer1": "Ich möchte als Delegierte*r eines Landes teilnehmen.",
 	"assistantFlowRoleAnswer2": "Ich möchte als Vertreter*in eines Nichtstaatlichen Akteurs teilnehmen.",
 	"assistantFlowRoleAnswer3": "Ich möchte als Journalist*in der Konferenzpresse teilnehmen.",
