--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -293,16 +293,16 @@
 	"assistantFlowRole2": "Du kannst dir eine der folgenden Rollen aussuchen:",
 	"assistantFlowRoleDelegate1": "Delegierte*r eines Staates",
 	"assistantFlowRoleDelegate2": "Als Delegierte*r vertrittst du die konkreten Interessen eines Staates in einem Gremium. Zum Beispiel: <em>Schweden im Wirtschafts- und Sozialrat</em> oder <em>Kenia in der Generalversammlung</em>.",
-	"assistantFlowRoleNSA1": "Vertreter*in eine*r NA",
-	"assistantFlowRoleNSA2": "Als Vertreter*in eine*r Nichtstaatlichen Akteur*in (NA) vertrittst du eine Organisation.",
-	"assistantFlowRoleNSA3": "Dabei bist du nicht an ein bestimmtes Gremium gebunden sondern kannst in den Gremien einfluss nehmen, die für deine Organisation die wichtigsten Themen behandeln",
+	"assistantFlowRoleNSA1": "Vertreter*in eines nichtstaatlichen Akteurs",
+	"assistantFlowRoleNSA2": "Du vertrittst eine*n nichtstaatliche*n Akteur*in, zum Beispiel <em>Ärzte ohne Grenzen</em> oder <em>Greenpeace International</em>.",
+	"assistantFlowRoleNSA3": "Du kannst dich frei zwischen allen Gremien bewegen und immer dort mitarbeiten, wo gerade die für deine Organisation wichtigsten Themen besprochen werden.",
 	"assistantFlowRolePress1": "Journalist*in",
 	"assistantFlowRolePress2": "Als Journalist*in der Konferenzpresse berichtest du über die Geschehnisse in den Gremien.",
-	"assistantFlowRolePress3": "Du schreibst Artikel und Kommentare und produzierst auch Fernsehnachrichten, die an den Abenden der Konferenz gezeigt werden.",
+	"assistantFlowRolePress3": "Du schreibst Artikel für die Printzeitung oder produzierst die Fernsehnachrichten, die an den Konferenzabenden gezeigt werden.",
 	"assistantFlowRoleOther1": "Andere spezielle Rolle",
-	"assistantFlowRoleOther2": "Manchmal werden bei unseren Konferenzen auch noch spezielle Rollen angeboten, die nicht in die oben genannten Kategorien passen.",
-	"assistantFlowRoleOther3": "Diese können zum Beispiel <em>Richter*in am IGH</em> sein.",
-	"assistantFlowRoleOther4": "Ob es solche Angebote wie die Simulation einer Krise oder des Internationalen Gerichtshofs gibt, erfährst du auf der Website der Konferenz bzw. bei den Auswahlmöglichkeiten der Einzelanmeldung.",
+	"assistantFlowRoleOther2": "Auf einigen Konferenzen gibt es spezielle Rollen, zum Beispiel die <em>Richter*innen am Internationalen Gerichtshof</em> oder besondere Gremien, die sich mit einer Krise befassen.",
+	"assistantFlowRoleOther3": "Ob es dieses Jahr solche Angebote gibt, erfährst du auf der Website der Konferenz.",
+	"assistantFlowRoleOther4": "LOREM IPSUM",
 	"assistantFlowRoleAnswer1": "Ich möchte als Delegierte*r eines Landes teilnehmen.",
 	"assistantFlowRoleAnswer2": "Ich möchte als Vertreter*in eines Nichtstaatlichen Akteurs teilnehmen.",
 	"assistantFlowRoleAnswer3": "Ich möchte als Journalist*in der Konferenzpresse teilnehmen.",
